--- a/react/survey_pie/package.json
+++ b/react/survey_pie/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
