--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"antd": "^5.24.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
@@ -21,8 +22,8 @@
 		"eslint": "^9.19.0",
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"eslint-plugin-react-refresh": "^0.4.18",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"globals": "^15.14.0",
 		"vite": "^6.1.0"
 	}
