--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -11,9 +11,11 @@
 	},
 	"dependencies": {
 		"antd": "^5.24.0",
+		"axios": "^1.7.9",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^6.29.0"
+		"react-router-dom": "^6.29.0",
+		"swr": "^2.3.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
