--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -10,9 +10,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.6.1",
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
 		"antd": "^5.24.0",
 		"axios": "^1.7.9",
+		"immer": "^10.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^6.29.0",
