--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@ant-design/icons": "^5.6.1",
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@reduxjs/toolkit": "^2.6.1",
 		"antd": "^5.24.0",
 		"axios": "^1.7.9",
 		"immer": "^10.1.1",
