--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -18,6 +18,7 @@
 		"immer": "^10.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "^6.29.0",
 		"styled-components": "^6.1.15",
 		"swr": "^2.3.2"
