--- a/react/survey-pie-admin/package.json
+++ b/react/survey-pie-admin/package.json
@@ -34,6 +34,7 @@
 		"eslint-plugin-react-refresh": "^0.4.18",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"globals": "^15.14.0",
+		"react-devtools": "^6.1.1",
 		"vite": "^6.1.0"
 	}
 }
