--- a/typescript/section01/package.json
+++ b/typescript/section01/package.json
@@ -3,13 +3,13 @@
 	"version": "1.0.0",
 	"main": "./src/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"tsc": "tsc ./src/index.ts"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"@types/node": "^24.0.3"
+		"@types/node": "^24.0.3",
+		"tsx": "^4.20.3"
 	}
 }
