[Ts] Fix : Cannot find module 'undici-types'. 오류
- skipLibCheck 옵션 true : TypeScript는 프로젝트 내에서 참조하는 라이브러리 파일(.d.ts)의 타입 정보를 검사하지 않는다
- 타입 검사를 생략하므로, 라이브러리 코드의 변경으로 인해 발생할 수 있는 타입 오류가 생길 수 있으므로 실제  프로젝트에서는 설정하지 않는게 좋을 것 같다고 생각함

--- a/typescript/section01/tsconfig.json
+++ b/typescript/section01/tsconfig.json
@@ -1,8 +1,9 @@
 // ts complie option 설정 파일
 {
-	// - compilerOptions : 컴파일
+	// - compilerOptions : 컴파일 결과 생성되는 자바스크립트 코드의 버전 설정
 	"compilerOptions": {
-		"target": "ES5"
+		"target": "ESNext", //최신 버전의 코드 생성됨
+		"skipLibCheck": true
 	},
 	// - include : 컴파일 할 TypeScript 파일들의 범위와 위치를 알려줌
 	"include": [
