[TS] - outDir : 컴파일하는 결과가 위치할 경로 설정 -  컴파일하는 결과로 생성되는 코드를 작성하는 코드 영역에서 분리 가능

--- a/typescript/section01/tsconfig.json
+++ b/typescript/section01/tsconfig.json
@@ -4,7 +4,8 @@
 	"compilerOptions": {
 		"target": "ESNext", //최신 버전의 코드 생성됨
 		"skipLibCheck": true, //
-		"module": "commonjs"
+		"module": "ESNext", // 컴파일 되는 모듈 시스템 설정
+		"outDir": "dist" // 컴파일된 자바스크립트 파일이 위치할 경로를 설정
 	},
 	// - include : 컴파일 할 TypeScript 파일들의 범위와 위치를 알려줌
 	"include": [
