--- a/next_js/z_com/package.json
+++ b/next_js/z_com/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "next": "15.4.2",
     "react": "19.1.0",
